--- a/app/src/main/res/layout/about_blood_request.xml
+++ b/app/src/main/res/layout/about_blood_request.xml
@@ -143,5 +143,13 @@
         android:textColor="#ea0f2cd1"
         android:textSize="15dp"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="***Please request blood not more than 2 days before."
+        android:layout_gravity="center"
+        android:textColor="#ea0f2cd1"
+        android:textSize="15dp"
+        />
 
 </LinearLayout>
